--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -107,7 +107,7 @@
 
   <div class="footer">
     <footer>
-      Created 2020 by Michelle Tran
+      &copy; 2020 by Michelle Tran
     </footer>
   </div>
 
