--- a/main_app/templates/discover.html
+++ b/main_app/templates/discover.html
@@ -120,7 +120,7 @@
       <h1 class="ui dividing header">Discover Companies</h1>
       <div class="ui list">
         <a href="https://www.kbdfans.com" target="_blank" class="item">KBD Fans</a>
-        <a href="https://thekey.company/" target="_blank" class="item">The Key Company</a>
+        <a href="https://thekey.company/" target="_blank" class="item">TheKey.Company</a>
         <a href="https://cannonkeys.com/" target="_blank" class="item">Cannon Keys</a>
         <a href="https://dixiemech.com/" target="_blank" class="item">Dixie Mech</a>
         <a href="https://drop.com/" target="_blank" class="item">Drop</a>
