--- a/main_app/templates/tips.html
+++ b/main_app/templates/tips.html
@@ -5,5 +5,66 @@
 {% endblock %}
 
 {% block content %}
-<h1>Tips page</h1>
+<h1 class="ui dividing header">New to the world of mechanical keyboards?</h1>
+<h2>We got you covered.</h2>
+
+<!-- Basics -->
+<div class="ui raised segment">
+  <h3 class="ui left floated header">Learn the basics!</h3>
+  <div class="ui clearing divider"></div>
+  <p>Thanks to the efforts of <a href="https://thekey.company/" target="_blank">TheKey.Company</a> and friends, this <a
+      href="https://keyboard.university/" target="_blank">website</a> is a comprehensive introduction on various
+    keyboard parts and extra resources that can be quite handy! Learn about the various different form factors of a
+    keyboard, more in-depth information and anatomy about switches, and much more!</p>
+</div>
+
+<!-- Recommended tools -->
+<div class="tools">
+  <h3 class="ui left floated header">Recommended Tools</h3>
+  <div class="ui clearing divider"></div>
+  <div class="ui horizontal segments">
+    <div class="ui segment tool">
+      <h4>Soldering Kit</h4>
+      <div class="ui medium image">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/719tx-5Cj-L._SL1500_.jpg" alt="">
+      </div>
+      <p>The Hakko FX888D-23BY is a highly recommended soldering station from all keyboard enthusiasts. Don't forget to
+        also purchase the solder, cleaning wire, and an optional helping hand!</p>
+    </div>
+    <div class="ui segment tool">
+      <h4>Lube and Lube Station</h4>
+      <div class="ui medium image">
+        <img
+          src="https://massdrop-s3.imgix.net/product-images/mstone-acrylic-mechanical-switch-lube-station/FP/G7ilZOadQmrVmSRGTbcv_CB5A3444-copy.jpg?auto=format&fm=jpg&fit=fill&w=820&h=547&bg=f0f0f0&dpr=1&q=70"
+          alt="">
+      </div>
+      <p>When building your mechanical keyboard, modifying and lubing your switches helps them feel smoother and perform
+        their best. </p>
+    </div>
+    <div class="ui segment tool">
+      <h4>Keycap Puller, Switch Puller</h4>
+      <div class="ui medium image">
+        <img
+          src="https://massdrop-s3.imgix.net/product-images/melgeek-mechanical-keyboard-tool-set/FP/dflfzm4OSN6sVmlH793g_1080x1080_MD-93077_01.png?auto=format&fm=jpg&fit=fill&w=820&h=547&bg=f0f0f0&dpr=1&q=70"
+          alt="">
+      </div>
+      <p>Make your life easier by purchasing a keycap puller and a switch puller. Removal in seconds. Extremely helpful
+        for both solder and hotswap PCB boards.</p>
+    </div>
+  </div>
+</div>
+
+<!-- link/embed videos on soldering, etc -->
+<div class="videos">
+  <h3 class="ui left floated header">Recommended Videos</h3>
+  <div class="ui clearing divider"></div>
+  <iframe width="446" height="315" src="https://www.youtube.com/embed/cRJV1jo5vao" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="446" height="315" src="https://www.youtube.com/embed/W0FSvTYlggw" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="446" height="315" src="https://www.youtube.com/embed/_N7adWvQDM4" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="446" height="315" src="https://www.youtube.com/embed/12L0QZFf2XA" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 {% endblock %}
