--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,14 +22,13 @@
       <a class="logo" href="{% url 'home' %}"><i class="keyboard outline icon"></i>Dream Keebs</a>
     </div>
     <div class="right menu">
+      <a class="item" href="{% url 'tips' %}">
+        Getting Started
+      </a>
+      {% if user.is_authenticated %}
       <a class="item" href="{% url 'discover' %}">
         Discover
       </a>
-      <a class="item" href="{% url 'tips' %}">
-        Tips
-      </a>
-
-      {% if user.is_authenticated %}
       <a class="item" href="{% url 'profile' %}">
         Profile
       </a>
@@ -56,8 +54,8 @@
     </div>
     <div class="modal-body">
       <form action="{% url 'login' %}" method="POST">
-        {% if login_error_message %}
-        <p> {{login_error_message}}</p>
+        {% if error_message %}
+        <p class="error"> {{error_message}}</p>
         {% endif %}
         {% csrf_token %}
         <div class="ui input">
@@ -82,6 +80,9 @@
       Sign Up
     </div>
     <div class="modal-body">
+      {% if error_message %}
+      <p class="error"> {{error_message}}</p>
+      {% endif %}
       <form action="{% url 'signup' %}" method="POST">
         {% csrf_token %}
         {% for field in form %}
