modal for create parts working

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="actions">
-          <input class="ui teal button" type="submit" value="Signup">
+          <input class="ui teal button" type="submit" value="Log In">
           <input type="hidden" name="next" value={{next}}>
         </div>
     </div>
