--- a/main_app/templates/part/cases.html
+++ b/main_app/templates/part/cases.html
@@ -18,31 +18,67 @@
           <img src="{{case.image}}" alt="" class="ui medium image">
         </div>
         <div class="info">
-          <label for="form_type"><h4>Form type:</h4> </label>
+          <label for="form_type">
+            <h4>Form type:</h4>
+          </label>
           {%if case.form_type == '40' %}
-            40%
+          40%
           {% elif case.form_type == '60'%}
-            60%
+          60%
           {% elif case.form_type == '65'%}
-            65%
+          65%
           {% elif case.form_type == '75'%}
-            75%
+          75%
           {% elif case.form_type == '10'%}
-            Full Size
+          Full Size
           {% elif case.form_type == 'OR'%}
-            Ortholinear
+          Ortholinear
           {% elif case.form_type == 'ER'%}
-            Ergonomic
+          Ergonomic
           {% elif case.form_type == 'DE'%}
-            Default
+          Default
           {% endif %} <br>
-          <label for="material"><h4>Material:</h4></label>{{case.material}} <br>
-          <label for="description"><h4>Description:</h4> </label>{{case.description}}
+          <label for="material">
+            <h4>Material:</h4>
+          </label>{{case.material}} <br>
+          <label for="description">
+            <h4>Description:</h4>
+          </label>{{case.description}}
         </div>
       </div>
     </a>
   </div>
   {% endfor %}
 
+  <div class="ui raised segment">
+    <h3 class="ui left floated header">Don't see the part you are looking for?</h3>
+    <div class="ui clearing divider"></div>
+    <p>Click <a class="item"id="create-case">here</a> to add a part</p>
+  </div>
+
+  <!-- modal -->
+  <div class="ui modal create" id="create-case-form">
+    <i class="close icon"></i>
+    <div class="header">
+      Create Part
+    </div>
+    <div class="modal-body">
+      <form action="{% url 'create_case' %}" method="POST">
+        {% csrf_token %}
+        {% for field in case_form %}
+        <label class="label">{{field.label}}</label>
+        <br>
+        <div class="ui input">
+          {{field }}
+        </div>
+        <br>
+        {% endfor %}
+        <div class="actions">
+          <input class="ui teal button" type="submit" value="Create">
+          <input type="hidden" name="next" value={{next}}>
+        </div>
+    </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
