--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -203,3 +203,12 @@ hr {
   width: 500px;
   height: 600px;
 }
+
+.ui.form.create{
+  padding: 0;
+  margin: 0;
+}
+.ui.form.create textarea{
+  width: 400px;
+  height: 100px;
+}
