--- a/main_app/templates/part/pcbs.html
+++ b/main_app/templates/part/pcbs.html
@@ -18,18 +18,54 @@
           <img src="{{pcb.image}}" alt="" class="ui medium image">
         </div>
         <div class="info">
-          <label for="pcb_type"><h4>PCB type:</h4> </label>
+          <label for="pcb_type">
+            <h4>PCB type:</h4>
+          </label>
           {%if pcb.pcb_type == 'SL' %}
-            Solder
+          Solder
           {% elif pcb.pcb_type == 'HS'%}
-            Hotswap
+          Hotswap
           {% endif %} <br>
-          <label for="description"><h4>Description:</h4> </label>{{pcb.description}}
+          <label for="description">
+            <h4>Description:</h4>
+          </label>{{pcb.description}}
         </div>
       </div>
     </a>
   </div>
   {% endfor %}
+
+  <div class="ui raised segment">
+    <h3 class="ui left floated header">Don't see the part you are looking for?</h3>
+    <div class="ui clearing divider"></div>
+    <a class="ui teal button"id="create-pcb">Add Part</a>
+  </div>
+
+  <!-- modal -->
+  <div class="ui modal create" id="create-pcb-form">
+    <i class="close icon"></i>
+    <div class="header">
+      Create Part
+    </div>
+    <div class="modal-body">
+      <form class="ui form create" action="{% url 'create_pcb' %}" method="POST">
+        <p>Please enter a valid URL for the image field!</p>
+        {% csrf_token %}
+        {% for field in pcb_form %}
+        <label class="label">{{field.label}}</label>
+        <br>
+        <div class="ui input">
+          {{field }}
+        </div>
+        <br>
+        {% endfor %}
+        <div class="actions">
+          <input class="ui teal button" type="submit" value="Create">
+          <input type="hidden" name="next" value={{next}}>
+        </div>
+    </div>
+    </form>
+  </div>
 
 </div>
 {% endblock %}
