--- a/main_app/templates/keyboard/show.html
+++ b/main_app/templates/keyboard/show.html
@@ -63,6 +63,17 @@
       <a class="ui teal button" href="{% url 'edit_keyboard' keyboard.id %}">Edit</a>
     </div>
     <div>
+      <a class="ui teal button" id="delete-confirm">Delete</a>
+    </div>
+  </div>
+
+  <!-- delete confirmation modal -->
+  <div class="ui modal delete" id="delete">
+    <i class="close icon"></i>
+    <div class="header">
+      Are you sure you want to delete?
+    </div>
+    <div class="modal-body">
       <form action="{% url 'keyboard_delete' keyboard.id %}" method="POST">
         {% csrf_token %}
         <button class="ui teal button" type="submit">Delete</button>
