--- a/main_app/templates/tracker/create.html
+++ b/main_app/templates/tracker/create.html
@@ -20,7 +20,11 @@
       <label for="status">Interest Check or Group Buy</label>
       {{tracker_form.interest_type}}
     </div>
-    {{tracker_form.date}}
+    <div class="seven wide field">
+      <label for="date">Interest Check Date/Group Buy Start Date</label>
+      {{tracker_form.date}}
+    </div>
+
   </div>
 
   <div class="fields">
