--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -1,7 +1,7 @@
 body {
   background-color: #F0F0F0;
   text-align: center;
-  font-size: 15px;
+  font-size: 18px;
 }
 
 .error {
@@ -217,6 +217,10 @@ hr {
   height: 150px;
 }
 
+
+.tracker {
+  padding-bottom: 20px;
+}
 .ui.accordion{
   text-align: left;
 }
@@ -226,5 +230,5 @@ hr {
 }
 .accordion-labels {
   color: #204051;
-  font-size: 12px;
+  font-size: 1.2em;
 }
