adds update functionality to tracker

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -48,6 +48,7 @@ body {
 .footer {
   background-color: #888888;
   color: white;
+  font-size: 15px;
   text-align: center;
   position: relative;
   padding: 10px;
@@ -221,6 +222,10 @@ hr {
 .tracker {
   padding-bottom: 20px;
 }
+
+.tracker>.ui.segment{
+  margin-top: 15px;
+}
 .ui.accordion{
   text-align: left;
 }
@@ -228,6 +233,7 @@ hr {
 .ui.accordion>.content{
   text-align: center;
 }
+
 .accordion-labels {
   color: #204051;
   font-size: 1.2em;
