--- a/main_app/templates/keyboard/create.html
+++ b/main_app/templates/keyboard/create.html
@@ -17,7 +17,7 @@
         <label for="name">Name</label>
         {{keyboard_form.name}}
       </div>
-      <div class="seven wide field">
+      <div class="three wide field">
         <label for="status">Status</label>
         {{keyboard_form.status}}
       </div>
