adds more styling to certain pages

--- a/main_app/templates/keyboard/show.html
+++ b/main_app/templates/keyboard/show.html
@@ -34,23 +34,23 @@
     <tbody>
       <tr>
         <td class="two wide column">Case:</td>
-        <td><a href="{% url 'case' keyboard.case.first.id %}">{{keyboard.case.first}}</a></td>
+        <td><a href="{% url 'cases' %}">{{keyboard.case.first}}</a></td>
       </tr>
       <tr>
         <td class="two wide column">Switch:</td>
-        <td><a href="{% url 'switch' keyboard.switch.first.id %}">{{keyboard.switch.first}}</a></td>
+        <td><a href="{% url 'switches' %}">{{keyboard.switch.first}}</a></td>
       </tr>
       <tr>
         <td class="two wide column">PCB:</td>
-        <td><a href="{% url 'pcb' keyboard.pcb.first.id %}">{{keyboard.pcb.first}}</a></td>
+        <td><a href="{% url 'pcbs' %}">{{keyboard.pcb.first}}</a></td>
       </tr>
       <tr>
         <td class="two wide column">Stabilizer:</td>
-        <td><a href="{% url 'stabilizer' keyboard.stabilizer.first.id %}">{{keyboard.stabilizer.first}}</a></td>
+        <td><a href="{% url 'stabilizers' %}">{{keyboard.stabilizer.first}}</a></td>
       </tr>
       <tr>
         <td class="two wide column">Keycap:</td>
-        <td><a href="{% url 'keycap' keyboard.keycap.first.id %}">{{keyboard.keycap.first}}</a></td>
+        <td><a href="{% url 'keycaps' %}">{{keyboard.keycap.first}}</a></td>
       </tr>
     </tbody>
   </table>
