--- a/main_app/templates/base/profile.html
+++ b/main_app/templates/base/profile.html
@@ -158,4 +158,12 @@
     </div>
   </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+    window.onload = function () {
+      $('.ui.accordion').accordion();
+    };
+  });
+</script>
 {% endblock %}
