--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -2,6 +2,8 @@ body {
   background-color: #F0F0F0;
   text-align: center;
   font-size: 17px;
+  display: flex;
+  flex-direction: column;
 }
 
 .error {
@@ -52,7 +54,7 @@ body {
   text-align: center;
   position: relative;
   padding: 10px;
-  bottom: 0;
+  align-self: flex-end;
 }
 
 hr {
@@ -242,4 +244,16 @@ hr {
 
 .show-container > .image {
   padding-top: 20px;
+}
+
+.ui.segment {
+  font-size: 16px;
+}
+
+.ui.segment.tool>p {
+  font-size: 16px;
+}
+
+.ui.segment.tool>h4 {
+  font-size: 18px;
 }
