--- a/main_app/templates/base/profile.html
+++ b/main_app/templates/base/profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div>
   <h1 class="ui dividing header">Welcome!</h1>
-  <h2>How it works...</h2>
+  <h2>How it works</h2>
   <p>Please create a keyboard with its name, status, and description. Afterwards, please edit it with the options provided!
   <p>Read up on all parts listed <a href="{% url 'discover' %}">here.</a></p>
   </p>
