--- a/main_app/templates/keyboard/edit.html
+++ b/main_app/templates/keyboard/edit.html
@@ -18,7 +18,7 @@
         <label for="name">Name</label>
         {{edit_keyboard.name}}
       </div>
-      <div class="seven wide field">
+      <div class="three wide field">
         <label for="status">Status</label>
         {{edit_keyboard.status}}
       </div>
