--- a/main_app/templates/tracker/edit.html
+++ b/main_app/templates/tracker/edit.html
@@ -12,15 +12,15 @@
     </h1>
     {% csrf_token %}
   <div class="fields">
-    <div class="seven wide field">
+    <div class="three wide field">
       <label for="name">Title</label>
       {{edit_tracker.title}}
     </div>
-    <div class="seven wide field">
+    <div class="three wide field">
       <label for="status">Interest Check or Group Buy</label>
       {{edit_tracker.interest_type}}
     </div>
-    <div class="seven wide field">
+    <div class="three wide field">
       <label for="date">Interest Check Date/Group Buy Start Date</label>
       {{edit_tracker.date}}
     </div>
