--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -102,16 +102,17 @@
   </div>
 
   <!-- Content goes here -->
-  {% block content %}
+  <div class="wrapper">
+    {% block content %}
 
-  {% endblock%}
+    {% endblock%}
 
-  <div class="footer">
-    <footer>
-      &copy; 2020 by Michelle Tran
-    </footer>
+    <div class="footer">
+      <footer>
+        &copy; 2020 by Michelle Tran
+      </footer>
+    </div>
   </div>
-
   <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
