--- a/main_app/templates/part/pcbs.html
+++ b/main_app/templates/part/pcbs.html
@@ -52,7 +52,7 @@
         <p>Please enter a valid URL for the image field!</p>
         {% csrf_token %}
         {% for field in pcb_form %}
-        <label class="label">{{field.label}}</label>
+        <b class="add-part">{{field.label}}</b>
         <br>
         <div class="ui input">
           {{field }}
