--- a/main_app/templates/part/stabilizers.html
+++ b/main_app/templates/part/stabilizers.html
@@ -7,59 +7,62 @@
 {% block content %}
 <h1 class="ui dividing header">Stabilizers</h1>
 
-  {% for stabilizer in stabilizers %}
-  <div class="ui raised segment">
-    <a href="{% url 'stabilizer' stabilizer.id %}">
-      <h3 class="ui left floated header">{{stabilizer.name}}</h3>
-      <div class="ui clearing divider"></div>
-      <div class="show-container">
-        <div class="image">
-          <img src="{{stabilizer.image}}" alt="" class="ui medium image">
-        </div>
-        <div class="info">
-          <label for="stabilizer_type"><h4>Stabilizer type:</h4> </label>
-          {%if stabilizer.stab_type == 'S' %}
-            Screw-in Stabilizers
-          {% elif stabilizer.stab_type == 'P'%}
-            PCB-Mounted
-          {% endif %} <br>
-          <label for="description"><h4>Description:</h4> </label>{{stabilizer.description}}
-        </div>
-      </div>
-    </a>
-  </div>
-  {% endfor %}
-
-  <div class="ui raised segment">
-    <h3 class="ui left floated header">Don't see the part you are looking for?</h3>
+{% for stabilizer in stabilizers %}
+<div class="ui raised segment">
+  <a href="{% url 'stabilizer' stabilizer.id %}">
+    <h3 class="ui left floated header">{{stabilizer.name}}</h3>
     <div class="ui clearing divider"></div>
-    <a class="ui teal button"id="create-stab">Add Part</a>
-  </div>
-
-  <div class="ui modal create" id="create-stab-form">
-    <i class="close icon"></i>
-    <div class="header">
-      Create Part
+    <div class="show-container">
+      <div class="image">
+        <img src="{{stabilizer.image}}" alt="" class="ui medium image">
+      </div>
+      <div class="info">
+        <label for="stabilizer_type">
+          <h4>Stabilizer type:</h4>
+        </label>
+        {%if stabilizer.stab_type == 'S' %}
+        Screw-in Stabilizers
+        {% elif stabilizer.stab_type == 'P'%}
+        PCB-Mounted
+        {% endif %} <br>
+        <label for="description">
+          <h4>Description:</h4>
+        </label>{{stabilizer.description}}
+      </div>
     </div>
-    <div class="modal-body">
-      <form class="ui form create" action="{% url 'create_stab' %}" method="POST">
-        <p>Please enter a valid URL for the image field!</p>
-        {% csrf_token %}
-        {% for field in stab_form %}
-        <label class="label">{{field.label}}</label>
-        <br>
-        <div class="ui input">
-          {{field }}
-        </div>
-        <br>
-        {% endfor %}
-        <div class="actions">
-          <input class="ui teal button" type="submit" value="Create">
-          <input type="hidden" name="next" value={{next}}>
-        </div>
-    </div>
-    </form>
-  </div>
-
+  </a>
 </div>
+{% endfor %}
+
+<div class="ui raised segment">
+  <h3 class="ui left floated header">Don't see the part you are looking for?</h3>
+  <div class="ui clearing divider"></div>
+  <a class="ui teal button" id="create-stab">Add Part</a>
+</div>
+
+<div class="ui modal create" id="create-stab-form">
+  <i class="close icon"></i>
+  <div class="header">
+    Create Part
+  </div>
+  <div class="modal-body">
+    <form class="ui form create" action="{% url 'create_stab' %}" method="POST">
+      <p>Please enter a valid URL for the image field!</p>
+      {% csrf_token %}
+      {% for field in stab_form %}
+      <b class="add-part">{{field.label}}</b>
+      <br>
+      <div class="ui input">
+        {{field }}
+      </div>
+      <br>
+      {% endfor %}
+      <div class="actions">
+        <input class="ui teal button" type="submit" value="Create">
+        <input type="hidden" name="next" value={{next}}>
+      </div>
+  </div>
+  </form>
+</div>
+
 {% endblock %}
